--- a/templates/taxi/car_detail.html
+++ b/templates/taxi/car_detail.html
@@ -12,7 +12,19 @@
     </a>
   </h1>
   <p>Manufacturer: ({{ car.manufacturer.name }}, {{ car.manufacturer.country }})</p>
-  <h1>Drivers</h1>
+  <div>
+     <h1>
+      Drivers
+     </h1>
+     <form action="" method="post" style="display: block;">
+       {% csrf_token %}
+        {% if user_driver %}
+        <input type="submit" value="Delete me from this car" class="btn btn-danger">
+       {% else %}
+         <input type="submit" value="Assign me to this car" class="btn btn-primary">
+       {% endif %}
+      </form>
+  </div>
   <hr>
   <ul>
     {% for driver in car.drivers.all %}
