--- a/templates/taxi/driver_comfirm_delete.html
+++ b/templates/taxi/driver_comfirm_delete.html
@@ -1,11 +1,10 @@
 {% extends "base.html" %}
-{% load crispy_forms_filters %}
 
 {% block content %}
-  <h1>{{ object|yesno:"Update license,Create driver" }}</h1>
-  <form action="" method="post" novalidate>
+  <h1>Delete driver?</h1>
+  <form action="" method="post">
     {% csrf_token %}
-    {{ form|crispy }}
-    <input type="submit" value="Submit" class="btn btn-primary">
+
+    <input type="submit" value="Yes" class="btn btn-danger">
   </form>
 {% endblock %}
